--- a/bayesian-linear-regression.Rmd
+++ b/bayesian-linear-regression.Rmd
@@ -12,7 +12,7 @@ You would normally just use <span class="pack" style = "">rstanarm</span> or
 ## Data Setup
 
 
-Create a correlation matrix of one's choosing assuming response as last column/row.
+Create a correlation matrix of one's choosing assuming response as last column/row.  This approach allows for some collinearity in the predictors.
 
 ```{r bayes-linreg-setup}
 library(tidyverse)
@@ -42,7 +42,7 @@ d[,'y'] = d[,'y'] - .1 # unnecessary, just to model a non-zero intercept
 str(d)
 cor(d)
 
-### Prepare for Stan
+# Prepare for Stan
 
 # create X (add intercept column) and y for vectorized version later
 X = cbind(1, d[,1:3]); colnames(X) = c('Intercept', 'X1', 'X2', 'X3')
